# rust-cli

./: .gitignore  Cargo.toml  README.md  template.json
src/: app.rs  main.rs
