[package]
name = "@appName@"
version = "0.1.0"
description = "Rust CLI app"
license = "MIT"
authors = ["@author_name@ <@author_email@>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
clap_generate = "4.5"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
